components/ra/proposal-allocations-v2/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: proposal-allocations-v2
spec:
  ports:
    - name: https
      protocol: TCP
      port: 5050
      targetPort: 5050
